# FanControl.LiquidCtl

./: .gitignore  .oxfmtrc.json  .releaserc.json  AGENTS.md  API.md  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  GAPS.md  README.md  build.ps1  bundle.ps1  lefthook.yml  license.txt  package.json  pnpm-lock.yaml  readme.md  release-please-config.json  renovate.json  renovate.json5
.agents/skills/csharp-developer/: SKILL.md
.agents/skills/csharp-developer/references/: aspnet-core.md  blazor.md  entity-framework.md  modern-csharp.md  performance.md
.agents/skills/python-anti-patterns/: SKILL.md
.agents/skills/python-error-handling/: SKILL.md
.agents/skills/python-pro/: SKILL.md
.agents/skills/python-pro/references/: packaging.md
.claude/: settings.local.json
.github/: README.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build-check.yaml  build.yaml  checks.yaml  dependabot-automerge.yaml  release-please.yaml  release.yaml
.renovate/: auto-merge.json5  groups.json5  semantic-commits.json5
agents/: architecture.md  development.md  plugin-interface.md  protocol.md  troubleshooting.md
scripts/: release.ps1
src/FanControl.Liquidctl/: BridgeProcess.cs  FanControl.Liquidctl.csproj  FanControl.Liquidctl.sln  ILiquidctlClient.cs  LiquidctlBridgeWrapper.cs  LiquidctlClient.cs  LiquidctlDevice.cs  LiquidctlPlugin.cs  Models.cs  PipeTransport.cs  SensorMapper.cs  Utils.cs
src/FanControl.Liquidctl.Tests/: BridgeProcessTests.cs  DeviceSensorTests.cs  FanControl.Liquidctl.Tests.csproj  LiquidctlBridgeWrapperTests.cs  LiquidctlClientTests.cs  LiquidctlDeviceTests.cs  LiquidctlPluginTests.cs  ModelsTests.cs  NamedPipeCollection.cs  PipeTransportTests.cs  README.md  SensorMapperTests.cs  UtilsTests.cs
src/Liquidctl/: pyproject.toml
src/Liquidctl.Bridge/: pyproject.toml
src/Liquidctl.Bridge/liquidctl_bridge/: __main__.py  liquidctl_service.py  models.py  pipe_server.py  server.py
src/Liquidctl.Bridge/liquidctl_bridge/service/: __init__.py  formatters.py  liquidctl_service.py
src/Liquidctl.Bridge/tests/: README.md  test.py  test_client.py  test_liquidctl_service.py  test_models.py  test_server.py
src/Liquidctl/liquidctl_server/: __init__.py  models.py
src/Liquidctl/tests/: test.py  test_client.py
src/liquidctl_server/: conftest.py  pyproject.toml
src/liquidctl_server/liquidctl_server/: __init__.py  __main__.py  models.py  pipe_server.py  server.py  win32_pipe.py
src/liquidctl_server/liquidctl_server/service/: __init__.py  config.py  driver_quirks.py  executor.py  liquidctl_service.py
src/liquidctl_server/tests/: __main__.py  test.py  test_client.py  test_config.py  test_executor.py  test_models.py  test_pipe_server.py  test_server.py  test_service.py  test_speed_channels.py
src/liquidctl_server/tests/manual/: README.md  test.py  test_client.py
