[project]
name = "liquidctl-bridge"
version = "0.1.0"
description = ""
authors = [{ name = "Antoine Bouteiller" }]
requires-python = ">=3.11,<3.14"
dependencies = [
    "liquidctl (>=1.15.0,<2.0.0)",
    "pywin32 (>=311,<312)",
    "msgspec (>=0.20.0,<0.21.0)",
]

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.0"
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
pyinstaller = "^6.14.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
