[project]
name = "liquidctl-bridge"
dynamic = ["version"]
description = ""
authors = [{ name = "Antoine Bouteiller" }]
requires-python = ">=3.14,<3.15"
dependencies = ["liquidctl>=1.15.0,<2.0.0", "pywin32>=311,<312", "msgspec>=0.20.0,<0.21.0"]

[dependency-groups]
dev = [
  "ruff>=0.14.0,<0.15.0",
  "pytest>=9.0.0,<10.0.0",
  "pytest-mock>=3.11.0,<4.0.0",
  "pyinstaller>=6.14.2,<7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../version.txt"
pattern = "(?P<version>.+)"
