[project]
name = "liquidctl-server"
dynamic = ["version"]
description = ""
authors = [{ name = "Antoine Bouteiller" }]
requires-python = ">=3.14,<3.15"
dependencies = [
  "liquidctl>=1.16.0,<2.0.0",
  "pywin32>=312,<313; sys_platform == 'win32'",
  "msgspec>=0.21.1,<0.22.0",
]

[dependency-groups]
dev = ["ruff>=0.15.0,<0.16.0", "nuitka>=4.1,<4.2", "pytest>=9.1,<9.2", "pytest-cov>=6.0,<7.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "../../package.json"
pattern = '"version":\s*"(?P<version>[^"]+)"'

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["manual"]
